hledger/test/errors/recentassertions.j
#!/usr/bin/env -S hledger check recentassertions -f

2022-01-01 *
  a  0 = 0

2022-01-09 *
  a  0
